# deepin-input-method

./: CMakeLists.txt
src/: CMakeLists.txt  config.h.in
src/client/: CMakeLists.txt
src/client/qt/: CMakeLists.txt  dim.json  dim_input_context.cpp
src/core/: log.c  log.h  msg_queue.c  msg_queue.h
src/im/: CMakeLists.txt  dinput.c  dinput.cpp  hmm.cpp  hmm.h  py.cpp  py.h
